--- a/backend/package.json
+++ b/backend/package.json
@@ -19,4 +19,16 @@
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
-}
+},
+"dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+
+    "cloudinary": "^1.40.0",  
+    "multer-storage-cloudinary": "^4.0.0" 
+},
